Fixed Sessions storage and creation bugs

--- a/src/pop-up/index.html
+++ b/src/pop-up/index.html
@@ -12,7 +12,7 @@
         <h1>Chrome Time Manager</h1>
         <div id="stats-container">
             <h2>Stats</h2>
-            <div id="total-time">Total Time Spent: <span id="total-time-spent">0</span> sec</div>
+            <div id="total-time">Total Time Spent: <span id="total-time-spent">0</span></div>
             <div id="time-per-site">Time per Site: <ul id="time-per-site-list"></ul></div>
         </div>
 
